# Learn-OpenGL

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md
assets/shaders/: BatchTextureFS.glsl  BatchTextureVS.glsl  BatchTextureVertexShader.glsl  FirstFS.glsl  FirstVertexShader.glsl  TextureFS.glsl  TextureFragmentShader.glsl  TextureVertexShader.glsl
assets/shaders/advanced/: BlendingFS.glsl  DepthTestFS.glsl  DepthTestVS.glsl  FramebufferFS.glsl
assets/shaders/lighting/: CubeFragmentShader.glsl  LightFragmentShader.glsl  LightingVertexShader.glsl  ObjectVS.glsl  ObjectVertexShader.glsl  PureColorFragmentShader.glsl  TextureFS.glsl  TextureFragmentShader.glsl
include/: Common.hpp  ExampleLayer.hpp  Light.hpp  LightLayer.hpp  Sandbox.hpp  advanced-layer.hpp  common.hpp  example-layer.hpp  light-layer.hpp  sandbox.hpp  simple-shapes.hpp
include/Light/: BaseLight.hpp  DirectionalLight.hpp  Light.hpp  PointLight.hpp
include/Material/: BaseMaterial.hpp  Material.hpp  PureColorMaterial.hpp  TextureMaterial.hpp
include/light/: base-light.hpp  directional-light.hpp  light.hpp  point-light.hpp
include/material/: base-material.hpp  material.hpp  pure-color-material.hpp  texture-material.hpp
script/: LineCounter.py  header-checker.py  line-counter.py
src/: ExampleLayer.cpp  Light.cpp  LightLayer.cpp  advanced-layer.cpp  example-layer.cpp  light-layer.cpp  main.cpp
src/Light/: BaseLight.cpp  DirectionalLight.cpp  PointLight.cpp
src/Material/: BaseMaterial.cpp  PureColorMaterial.cpp  TextureMaterial.cpp
src/light/: base-light.cpp  directional-light.cpp  point-light.cpp
src/material/: base-material.cpp  pure-color-material.cpp  texture-material.cpp
